--- a/src/style.css
+++ b/src/style.css
@@ -175,11 +175,11 @@ nav:hover {
   }
   .text-container {
     margin-top: 60px;
-    text-align: center;
+    text-align: left;
     margin-left: 20%;
   }
   .block-name {
-    margin-left: -20%;
+    /* margin-left: -20%; */
   }
   .next-button {
     padding-bottom: 100px;
